Update: New platform features and improvements

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -81,6 +81,7 @@
   "header": {
     "searchPlaceholder": "Search works, materials or users",
     "clearSearch": "Clear Search",
+    "search": "Search",
     "toggleTheme": "Toggle Theme",
     "shortcuts": "Keyboard Shortcuts",
     "feedback": "Feedback",
@@ -154,5 +155,50 @@
     "cookiePolicy": "Cookie Policy",
     "backToTop": "Back to Top",
     "allRightsReserved": "© 2025 Jinmai Zhifang. All rights reserved"
+  },
+  "performance": {
+    "dashboardTitle": "Performance Monitoring Dashboard",
+    "dashboardDescription": "Real-time monitoring of application performance metrics, including Core Web Vitals, network requests, component rendering, and memory usage",
+    "refreshButton": "Refresh",
+    "refreshSuccess": "Performance metrics refreshed",
+    "runAuditButton": "Run Audit",
+    "auditSuccess": "Performance audit completed",
+    "fetchFailed": "Failed to fetch performance metrics",
+    "auditFailed": "Performance audit failed",
+    "clearMetricsButton": "Clear All Metrics",
+    "clearSuccess": "Performance metrics cleared"
+  },
+  "error": {
+    "title": "Page Error",
+    "message": "An error occurred on the page. Please refresh or contact support",
+    "description": "Sorry, something went wrong. Please try refreshing the page or contact support for help.",
+    "refreshButton": "Refresh Page",
+    "contactSupportButton": "Contact Support",
+    "detailsTitle": "Error Details",
+    "componentStack": "Component Stack:",
+    "NETWORK_ERROR": "Network connection failed. Please check your network settings and try again.",
+    "TIMEOUT_ERROR": "Request timed out. Please check your network and try again, or switch to 4G.",
+    "SERVER_ERROR": "The server is temporarily unavailable. Please try again later.",
+    "PERMISSION_DENIED": "You don't have permission to perform this operation.",
+    "AUTH_REQUIRED": "Please login first to continue.",
+    "RESOURCE_NOT_FOUND": "Requested resource not found.",
+    "RESOURCE_LOAD_FAILED": "Resource loading failed. Please check your network and try again.",
+    "VALIDATION_ERROR": "Please check if your input information is correct.",
+    "FIELD_REQUIRED": "{field} is required.",
+    "COLLABORATION_ERROR": "Collaboration feature is temporarily unavailable. Please try again later.",
+    "USER_NOT_FOUND": "User not found.",
+    "INVITE_ERROR": "Failed to send invitation. Please try again later.",
+    "MODEL_SWITCH_ERROR": "Failed to switch model. Please try again later.",
+    "MODEL_TIMEOUT": "AI model response timed out. Please try switching to another model.",
+    "MODEL_ERROR": "AI model processing failed. Please try again later.",
+    "TIANJIN_ASSETS_ERROR": "Tianjin material library loading failed. Please try again later.",
+    "BROWSER_COMPAT_ERROR": "Your browser version is too low. It is recommended to upgrade Chrome to version 90+ for the best experience.",
+    "DEFAULT_ERROR": "Operation failed. Please try again later.",
+    "AUTH_ERROR": "Authentication failed. Please login again.",
+    "FORBIDDEN_ERROR": "You don't have permission to access this resource.",
+    "CORS_ERROR": "Cross-origin request failed. Please contact the administrator.",
+    "TEXTURE_ERROR": "Texture loading failed. Please check your network and try again.",
+    "CANVAS_ERROR": "Canvas operation failed. Please check browser compatibility.",
+    "WEBGL_ERROR": "WebGL initialization failed. Please check browser support."
   }
 }
