--- a/src/i18n/locales/zh.json
+++ b/src/i18n/locales/zh.json
@@ -81,6 +81,7 @@
   "header": {
     "searchPlaceholder": "搜索作品、素材或用户",
     "clearSearch": "清除搜索",
+    "search": "搜索",
     "toggleTheme": "切换主题",
     "shortcuts": "快捷键提示",
     "feedback": "问题反馈",
@@ -154,5 +155,50 @@
     "cookiePolicy": "Cookie政策",
     "backToTop": "回到顶部",
     "allRightsReserved": "© 2025 津脉智坊. 保留所有权利"
+  },
+  "performance": {
+    "dashboardTitle": "性能监控仪表盘",
+    "dashboardDescription": "实时监控应用性能指标，包括核心 Web Vitals、网络请求、组件渲染和内存使用",
+    "refreshButton": "刷新",
+    "refreshSuccess": "性能指标已刷新",
+    "runAuditButton": "性能审计",
+    "auditSuccess": "性能审计已完成",
+    "fetchFailed": "获取性能指标失败",
+    "auditFailed": "性能审计失败",
+    "clearMetricsButton": "清除所有指标",
+    "clearSuccess": "性能指标已清除"
+  },
+  "error": {
+    "title": "页面发生错误",
+    "message": "页面发生错误，请刷新页面或联系客服",
+    "description": "很抱歉，页面发生了一些问题。请尝试刷新页面或联系客服获取帮助。",
+    "refreshButton": "刷新页面",
+    "contactSupportButton": "联系客服",
+    "detailsTitle": "错误详情",
+    "componentStack": "组件栈:",
+    "NETWORK_ERROR": "网络连接失败，请检查您的网络设置后重试。",
+    "TIMEOUT_ERROR": "请求超时，请检查网络后重试，或切换至4G网络。",
+    "SERVER_ERROR": "服务器暂时不可用，请稍后再试。",
+    "PERMISSION_DENIED": "您没有权限执行此操作。",
+    "AUTH_REQUIRED": "请先登录后再继续操作。",
+    "RESOURCE_NOT_FOUND": "找不到请求的资源。",
+    "RESOURCE_LOAD_FAILED": "资源加载失败，请检查网络后重试。",
+    "VALIDATION_ERROR": "请检查您输入的信息是否正确。",
+    "FIELD_REQUIRED": "{field} 不能为空。",
+    "COLLABORATION_ERROR": "协作功能暂时不可用，请稍后再试。",
+    "USER_NOT_FOUND": "找不到该用户。",
+    "INVITE_ERROR": "邀请发送失败，请稍后再试。",
+    "MODEL_SWITCH_ERROR": "模型切换失败，请稍后再试。",
+    "MODEL_TIMEOUT": "AI模型响应超时，请尝试切换其他模型。",
+    "MODEL_ERROR": "AI模型处理失败，请稍后再试。",
+    "TIANJIN_ASSETS_ERROR": "天津素材库加载失败，请稍后再试。",
+    "BROWSER_COMPAT_ERROR": "您的浏览器版本过低，建议升级Chrome至90+版本以获得最佳体验。",
+    "DEFAULT_ERROR": "操作失败，请稍后再试。",
+    "AUTH_ERROR": "认证失败，请重新登录。",
+    "FORBIDDEN_ERROR": "您没有权限访问该资源。",
+    "CORS_ERROR": "跨域请求失败，请联系管理员。",
+    "TEXTURE_ERROR": "纹理加载失败，请检查网络后重试。",
+    "CANVAS_ERROR": "Canvas操作失败，请检查浏览器兼容性。",
+    "WEBGL_ERROR": "WebGL初始化失败，请检查浏览器支持情况。"
   }
 }
