Fix: Add Content-Security-Policy to block unauthorized requests

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -75,6 +75,7 @@
     "popularityRanking": "Popularity Ranking",
     "funGames": "Fun Games",
     "newWindowLab": "New Window Lab",
+    "pointsMall": "Points Mall",
     "brandCooperation": "Brand Cooperation",
     "aboutUs": "About Us"
   },
