--- a/src/i18n/locales/zh.json
+++ b/src/i18n/locales/zh.json
@@ -75,6 +75,7 @@
     "popularityRanking": "人气榜",
     "funGames": "趣味游戏",
     "newWindowLab": "新窗口实验室",
+    "pointsMall": "积分商城",
     "brandCooperation": "品牌合作",
     "aboutUs": "关于我们"
   },
