Fix missing application entry point and update project files

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -93,6 +93,7 @@
     "noNotifications": "No notifications",
     "close": "Close",
     "profile": "Profile",
+    "analytics": "Analytics",
     "membershipCenter": "Membership Center",
     "myCollection": "My Collection",
     "settings": "Settings",
