--- a/src/i18n/locales/zh.json
+++ b/src/i18n/locales/zh.json
@@ -93,6 +93,7 @@
     "noNotifications": "暂无通知",
     "close": "关闭",
     "profile": "个人中心",
+    "analytics": "数据分析",
     "membershipCenter": "会员中心",
     "myCollection": "我的收藏",
     "settings": "设置",
