Update: New features and improvements for deployment

--- a/src/i18n/locales/zh.json
+++ b/src/i18n/locales/zh.json
@@ -55,12 +55,14 @@
     "collapsibleSidebar": "折叠侧边栏",
     "expandSidebar": "展开侧边栏",
     "commonFunctions": "常用功能",
+    "creativeToolsGroup": "创作工具",
     "coCreation": "共创功能",
     "tianjinFeatures": "天津特色",
     "moreServices": "更多服务",
     "home": "首页",
     "exploreWorks": "探索作品",
     "creationCenter": "创作中心",
+    "creativeTools": "创作工具",
     "inspirationEngine": "灵感引擎",
     "culturalKnowledge": "文化知识库",
     "coCreationGuide": "共创向导",
